--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="hint_book_title">Title...</string>
+    <string name="hint_book_author">Author...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Book not saved because there are empty fields</string>
+
 </resources>
