--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="hint_book_author">Author...</string>
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Book not saved because there are empty fields</string>
-
+    <string name="book_added">Book added</string>
 </resources>
