p25 editing and deleting files final

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Book not saved because there are empty fields</string>
     <string name="book_added">Book added</string>
+    <string name="book_deleted">Book deleted</string>
+    <string name="book_edited">Book edited</string>
 </resources>
